--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
   compileSdkVersion 29
+  buildToolsVersion "29.0.3"
+  flavorDimensions "default"
+
   defaultConfig {
     applicationId "com.target.targetcasestudy"
     minSdkVersion 21
     targetSdkVersion 29
     versionCode 1
     versionName "1.0"
+    vectorDrawables.useSupportLibrary = true
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
 
@@ -17,10 +22,19 @@ android {
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
+  buildFeatures {
+    dataBinding = true
+  }
+
   buildTypes {
     release {
-      minifyEnabled false
+      shrinkResources true
+      minifyEnabled true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    }
+    debug {
+      debuggable true
+      minifyEnabled false
     }
   }
 }
@@ -29,10 +43,23 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-  implementation "androidx.appcompat:appcompat:1.1.0"
-  implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+  implementation "androidx.appcompat:appcompat:1.2.0"
+  implementation "androidx.constraintlayout:constraintlayout:2.0.4"
   implementation "androidx.recyclerview:recyclerview:1.1.0"
 
+  implementation 'com.google.android.material:material:1.2.1'
+  implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+  implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+
+  // retrofit2
+  implementation "com.squareup.retrofit2:retrofit:2.8.1"
+  implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
+  implementation "com.squareup.okhttp3:logging-interceptor:4.0.1"
+  implementation "com.squareup.okhttp3:okhttp:4.0.1"
+  implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+
+  //Image Loader
+  implementation 'com.github.bumptech.glide:glide:4.11.0'
 
   // Testing
   testImplementation 'junit:junit:4.13'
