--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
   //Image Loader
   implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+  implementation 'com.airbnb.android:lottie:3.4.4'
+
   // Testing
   testImplementation 'junit:junit:4.13'
   androidTestImplementation 'com.android.support.test:runner:1.0.2'
