--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
   implementation 'com.github.bumptech.glide:glide:4.11.0'
 
   implementation 'com.airbnb.android:lottie:3.4.4'
+  implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
   // Testing
   testImplementation 'junit:junit:4.13'
